# yarp-openmct

./: .gitignore  CMakeLists.txt  README.md  dictionary.json  historical-telemetry-plugin.js  index.html  package-lock.json  package.json  realtime-telemetry-plugin.js  runicubtelemetry
common/: openMctServerHandlerBase.js  processedConfig.js  processedDefault.js  utils.js  websocket-tracker.js  yarpNameListHandler.js
conf/: dictionaryVectorCollectionsTelemetry.json  servers.json
config/: default.json  processedDefault.js
doc/: add-new-vector-collection-port.md  configure-the-visualizer-client.md  installing-nodejs-and-npm-from-nvm.md
example-server/: server.js
exchange/: headIMUoverlayPlotOrientation.json
exchange/JointTracking/: LeftAnklePitchTracking.json  LeftAnkleRollTracking.json  LeftHipPitchTracking.json  LeftHipRollPWM_Current.json  LeftHipRollTracking.json  LeftHipYawTracking.json  LeftKneeTracking.json  LeftLegTracking.json  LeftLowerLegTracking.json  LeftUpperLegTracking.json  RightAnklePitchTracking.json  RightAnkleRollTracking.json  RightHipPitchTracking.json  RightHipRollTracking.json  RightHipYawTracking.json  RightKneeTracking.json  RightLegTracking.json  RightLowerLegTracking.json  RightUpperLegTracking.json
exchange/jointPositions/: LeftLegPositions.json  LegsPositions.json  RightLegPositions.json
exchange/logging/: YarprobotinterfaceProcessLoggingTable.json
exchange/utilities/: BatteryAndPing.json
iCubTelemVizServer/: CMakeLists.txt  configHandler.js  getDataURIscheme.js  history-server.js  iCubTelemVizServer.js  icubtelemetry.js  index.html  openMctServerHandler.js  openMctServerHandlerParent.js  openMctServerHandlerParentProc.js  package-lock.json  package.json  pingHandler.js  realtime-server.js  serverTest.js  terminationHandler.js  wearable-metadata-server.js  wearableDataParser.js  websocket-tracker.js
iCubTelemVizServer/devices/: CMakeLists.txt
iCubTelemVizServer/devices/battery/hardware/battery/: icubfakebattery.xml
iCubTelemVizServer/devices/robots/iCubGazeboV2_5/battery/: icub_battery.xml  yarprobotinterface.ini
iCubTelemVizServer/devices/robots/iCubGazeboV2_5/battery/wrappers/battery/: battery.xml
iCubTelemVizServer/https/conf/: server.key.org
iCubTelemetryVisualizerServer/: history-server.js  iCubTelemVisServer.js  iCubTelemVisServer_https.js  icubtelemetry.js  index.html  realtime-server.js  server.js
iCubTelemetryVisualizerServer/https/conf/: server.crt  server.csr  server.key
openmct-static-server/: historical-telemetry-plugin.js  package.json  server.js
openmctStaticServer/: dictionary-plugin.js  dictionary.json  dictionaryIcubTelemetry.json  dictionaryVectorCollectionsTemplate.json  dictionaryWalkingControllerTemplate.json  dictionayWalkingController.js  domainObjTypes.js  genDictFromWalkingCtrlPortDataStruct.js  historical-telemetry-plugin.js  index.html  namespacesNtypes.js  openMctServerHandlerChildProc.js  package-lock.json  package.json  realtime-telemetry-plugin.js  runModule.sh  server.js  serverTest.js  static-server.js  walkingCtrlPortDataStruct.json
openmctStaticServer/layouts/: icub-sensors-layout.json
openmctStaticServer/plugins/: dictionary-plugin.js  expandTelemetryMetadataInDict.js  historical-telemetry-plugin.js  namespacesNtypes.js  realtime-telemetry-plugin.js
openmctStaticServer/plugins/conf/: dictionaryBaseTemplate.json  dictionaryIFeelSuitTelemetry.json  dictionaryIcubTelemetry.json  dictionaryMySavedPanels.json  dictionaryProcessLogging.json  domainObjTypes.js
openmctStaticServer/plugins/staticImportObjectPlugin/: StaticModelProvider.js  object-utils.js  plugin.js
slides/: XTeam_RI_Vertical_iCubTelemetryVisualizer_05102021.pptx  research-increment-slides.txt
